[gd_scene load_steps=13 format=3 uid="uid://cmfn4shrapibl"]

[ext_resource type="Script" uid="uid://l55tsn1hrqwy" path="res://main/game.gd" id="1_2c7eb"]
[ext_resource type="Script" uid="uid://cthtgumn3vfom" path="res://main/world.gd" id="2_4u4fy"]
[ext_resource type="PackedScene" uid="uid://viqjen2gswl8" path="res://main/pureslime.tscn" id="3_v3ojx"]
[ext_resource type="PackedScene" uid="uid://b0lt2mqptlvq7" path="res://main/enemy_01.tscn" id="5_j015t"]
[ext_resource type="Script" uid="uid://bsrp7my386qil" path="res://main/EnemyManager.gd" id="5_v3ojx"]
[ext_resource type="Script" uid="uid://dejwruss64750" path="res://main/SummonManager.gd" id="8_0coyo"]
[ext_resource type="PackedScene" uid="uid://c34l1he2h2chx" path="res://main/weapons.tscn" id="8_v3ojx"]
[ext_resource type="Script" uid="uid://c5816rp73wbu3" path="res://main/scripts/ui/HUD.gd" id="9_4u4fy"]
[ext_resource type="PackedScene" uid="uid://bb1qcbw1x6uah" path="res://main/projectile_basic.tscn" id="9_v3ojx"]
[ext_resource type="Texture2D" uid="uid://02qn7w1ap00i" path="res://img/HPBar_Under.png" id="10_f7m14"]
[ext_resource type="Texture2D" uid="uid://1m1qtdnp7wix" path="res://img/HPBar_Progress.png" id="12_0coyo"]
[ext_resource type="Script" uid="uid://doqy6mxgnxlrg" path="res://main/scripts/ui/DebugPanel.gd" id="12_v3ojx"]

[node name="Game" type="Node2D"]
script = ExtResource("1_2c7eb")
game_player_packed_scene = ExtResource("3_v3ojx")

[node name="SpawnPoint" type="Node2D" parent="."]

[node name="World" type="Node2D" parent="."]
script = ExtResource("2_4u4fy")

[node name="Props" type="Node2D" parent="World"]

[node name="Decoration" type="Node2D" parent="World/Props"]

[node name="TileMapLayer" type="TileMapLayer" parent="World"]

[node name="Entities" type="Node2D" parent="."]

[node name="Players" type="Node2D" parent="Entities"]

[node name="pureslime" parent="Entities/Players" instance=ExtResource("3_v3ojx")]

[node name="Enemies" type="Node2D" parent="Entities"]
script = ExtResource("5_v3ojx")

[node name="Enemy_01" parent="Entities/Enemies" instance=ExtResource("5_j015t")]

[node name="Weapons" parent="Entities" instance=ExtResource("8_v3ojx")]

[node name="projectile_basic" parent="Entities" instance=ExtResource("9_v3ojx")]

[node name="Summons" type="Node2D" parent="."]
script = ExtResource("8_0coyo")

[node name="UI" type="CanvasLayer" parent="."]
layer = 0

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_4u4fy")

[node name="HPBar" type="TextureProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
max_value = 99.9
texture_under = ExtResource("10_f7m14")
texture_progress = ExtResource("12_0coyo")

[node name="ExpBar" type="TextureProgressBar" parent="UI/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WeaponList" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BuffIcons" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PauseMenu" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DebugRoot" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DebugPanel" type="Panel" parent="UI/DebugRoot"]
self_modulate = Color(1, 1, 1, 0)
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_bottom = 300.0
grow_horizontal = 0
script = ExtResource("12_v3ojx")
ui_debug_game_node_path = NodePath("../../..")

[node name="TextEdit" type="TextEdit" parent="UI/DebugRoot/DebugPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.564
anchor_top = 0.44400004
anchor_right = 0.564
anchor_bottom = 0.44400004
offset_left = -51.04
offset_top = 1.7999878
offset_right = 38.96
offset_bottom = 37.799988
text = "冲刺=空格"

[node name="slimeResurrection" type="Button" parent="UI/DebugRoot/DebugPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 11.0
offset_right = 101.0
offset_bottom = 47.0
text = "角色重生"

[node name="slimeDie" type="Button" parent="UI/DebugRoot/DebugPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 52.0
offset_right = 101.0
offset_bottom = 88.0
text = "角色死亡"

[node name="slimeStagger" type="Button" parent="UI/DebugRoot/DebugPanel"]
layout_mode = 0
offset_left = 11.0
offset_top = 93.0
offset_right = 101.0
offset_bottom = 129.0
text = "硬直"

[node name="Camera2D" type="Camera2D" parent="."]
